<resources>
    <string name="app_name">Foodiez</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="nav_voucher">Voucher</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register_short">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
