<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@mipmap/baseline_local_dining_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_history"
        android:icon="@mipmap/baseline_description_black_24dp"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_voucher"
        android:icon="@mipmap/baseline_local_activity_black_24dp"
        android:title="@string/nav_voucher" />
    <item
        android:id="@+id/nav_favorite"
        android:icon="@mipmap/baseline_favorite_black_24dp"
        android:title="@string/nav_favorite" />
    <item
        android:id="@+id/nav_account"
        android:icon="@mipmap/baseline_account_circle_black_24dp"
        android:title="@string/nav_account" />
</menu>